<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:background="@color/app_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:weightSum="1"
        android:layout_margin="10dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
           app:shapeAppearanceOverlay="@style/CircleImage"
            android:layout_weight="0.0"
          />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.90"
            android:layout_marginStart="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello, Mr, Muneeb"
                android:textStyle="bold"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pharmacist"
                android:textStyle="normal"
                android:textSize="13sp"/>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/baseline_notifications_24"
                android:padding="10dp"
                app:tint="@color/black" />
            <TextView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_circle"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="8sp"/>
        </RelativeLayout>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="10dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardNewCourses"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/pending">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10sp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvNewCourses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Cources"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/reschedule">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Registered Cources"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvRegisteredLessonsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/progress_card_color">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10sp"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/circularProgressBar"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerInParent="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="of 20"
                        android:textStyle="normal"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"/>


            </RelativeLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardCompletedCourses"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/completed">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10sp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Completed Cources"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tvCompletedLessonsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"/>


            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/badges"
                android:textStyle="bold"
                android:textSize="17sp"
              />
            <TextView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/rounded_circle"
                android:gravity="center"
                android:text="8"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/app_color"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textStyle="normal"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBagdes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:orientation="horizontal"
        tools:listitem="@layout/item_badges"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

</LinearLayout>